# CDRRMO-node

main/: CMakeLists.txt  central_logic.cpp  central_logic.h  crc.cpp  crc.h  frame_parser.cpp  frame_parser.h  get_message.cpp  get_message.h  lora_receive.cpp  lora_receive.h  lora_uart.cpp  lora_uart.h  main.c  main.cpp  message.cpp  message.h  message_frame.cpp  message_frame.h  reception.cpp  reception.h  transmission.cpp  transmission.h
